# vision-backend

./: CMakeLists.txt  CMakePresets.json  README.md  build.sh
cmake/modules/: FetchGTest.cmake
doc/: infer-schema.json
src/: CMakeLists.txt  ai_service.cpp  ai_service.hpp  camera_service.cpp  camera_service.hpp  control_service.cpp  control_service.hpp  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/app/src/: main.cpp
src/common/: CMakeLists.txt
src/common/inc/common/: json.hpp
src/common/inc/common/utils/: logging.hpp
src/common/inc/common/zmq/: pub_socket.hpp  rep_socket.hpp
src/common/src/zmq/: pub_socket.cpp  rep_socket.cpp
src/config/: CMakeLists.txt
src/config/inc/config/: app_config.hpp  zmq_config.hpp
src/services/: CMakeLists.txt  ai_service.cpp  camera_service.cpp  camera_service.hpp  control_service.cpp
src/services/inc/services/: ai_service.hpp  audio_service.hpp  bluetooth_service.hpp  camera_service.hpp  control_service.hpp  music_service.hpp  pipeline_wrapper.hpp
src/services/inc/services/audio/: audio_service.hpp
src/services/inc/services/bluetooth/: bluetooth_service.hpp
src/services/inc/services/camera/: camera_service.hpp
src/services/inc/services/control/: control_service.hpp
src/services/inc/services/infer/: ai_service.hpp
src/services/inc/services/music/: music_service.hpp  pipeline_wrapper.hpp
src/services/src/: control_service.cpp
src/services/src/adapters/: audio_service_adapter.cpp  audio_service_adapter.hpp  bluetooth_service_adapter.cpp  bluetooth_service_adapter.hpp  camera_service_adapter.cpp  camera_service_adapter.hpp  i_service.hpp  music_service_adapter.cpp  music_service_adapter.hpp
src/services/src/adapters/audio/: audio_service_adapter.cpp  audio_service_adapter.hpp
src/services/src/adapters/bluetooth/: bluetooth_service_adapter.cpp  bluetooth_service_adapter.hpp
src/services/src/adapters/camera/: camera_service_adapter.cpp  camera_service_adapter.hpp
src/services/src/adapters/music/: music_service_adapter.cpp  music_service_adapter.hpp
src/services/src/impl/audio/: audio_service.cpp
src/services/src/impl/bluetooth/: bluetooth_service.cpp
src/services/src/impl/camera/: camera_service.cpp
src/services/src/impl/control/: control_service.cpp
src/services/src/impl/infer/: ai_service.cpp
src/services/src/impl/music/: music_service.cpp
src/services/src/impl/music/custom-pipeline/: bin_audio.cpp  bin_audio.hpp  bin_source.cpp  bin_source.hpp  custom_pipeline.cpp  custom_pipeline.hpp  sink_bin.cpp  sink_bin.hpp  source_bin.cpp  source_bin.hpp
src/services/src/impl/music/playbin-pipeline/: playbin_pipeline.cpp  playbin_pipeline.hpp
test/: CMakeLists.txt
test/integration/audio/: CMakeLists.txt  audio_test.cpp
test/unit/: CMakeLists.txt
test/unit/hello/: CMakeLists.txt  test_hello.cpp
test/unit/services/: CMakeLists.txt
tools/: run-test.sh  target-build.sh
